// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`exportFoundry structure snapshot through factory 1`] = `
"// SPDX-License-Identifier: MIT
// DeployMinimal.s.sol: deploys the diamond "Minimal" as Lattice Studio composed it.
// Generated by Lattice Studio 0.1.0. The same recipe, catalog and inputs give the same bytes.
//
// Recipe hash: <recipe hash>
// Catalog: Lattice v1.2.3 at commit 1111111111111111111111111111111111111111, catalog hash 0xcacacacacacacacacacacacacacacacacacacacacacacacacacacacacacacaca
// Toolchain: Foundry 1.8.3, solc 0.8.36
// Deploys through: LatticeFactory.deploy, one transaction with its init
// Salt: deploying account, scope 0x00 (every-chain), entropy 0xababababababababababab
// Chains: 84532, 11155111
//
// Run:
//   forge script DeployMinimal.s.sol --rpc-url $RPC_URL --account deployer --broadcast
// On Anvil, fork a supported chain where the shared contracts exist: anvil --fork-url $RPC_URL
//
// Before it broadcasts, the script checks that every shared contract's codehash matches the catalog, that the
// predicted address is empty, and that its own simulation of the deploy finds facets() equal to this plan:
//   Loupe 1.2.3, 4 selectors
//   Token 1.2.3, 2 selectors
//
// Init: one direct call
//   TokenInit.init((address,string,uint8),address)
// References: "This diamond" is the predicted address; "Deploying account" is the broadcaster.
//
// Verify: the script creates no contract forge could match. Verify the diamond against the published Lattice
// standard JSON, in a Lattice checkout at v1.2.3 (commit 1111111111111111111111111111111111111111):
//   FOUNDRY_PROFILE=ci forge verify-contract <diamond> src/Lattice.sol:Lattice --verifier sourcify --chain <chain id>
//
// Leaves out:
//   Deploying missing shared contracts: use Deploy missing contracts… in Lattice Studio or the lattice-studio CLI.
pragma solidity ^0.8.30;

import {Script} from "forge-std/Script.sol";
import {console} from "forge-std/console.sol";

// Lattice's diamond types (diamond-lib DiamondLib.sol and ILatticeFactory.sol at the pin), inlined.
enum FacetCutAction {
    Add,
    Replace,
    Remove
}

struct FacetCut {
    address facetAddress;
    FacetCutAction action;
    bytes4[] functionSelectors;
}

struct Facet {
    address facetAddress;
    bytes4[] functionSelectors;
}

struct RecipeEntry {
    bytes32 nameHash;
    uint64 version;
}

interface ILatticeFactory {
    function deploy(
        RecipeEntry[] calldata entries,
        FacetCut[] calldata customCuts,
        address init,
        bytes calldata initCalldata,
        bytes32 salt
    ) external returns (address diamond);

    function predict(address deployer, bytes32 salt) external view returns (address diamond);
}

interface IDiamondLoupe {
    function facets() external view returns (Facet[] memory);
}

struct ChainConfig {
    address factory;
    bytes32 factoryCodehash;
    bytes32 proxyInitCodeHash;
    string proxyCommit;
}

// TokenInit p: address owner, string name, uint8 decimals
struct TokenInitP {
    address owner;
    string name;
    uint8 decimals;
}

contract DeployMinimal is Script {
    error UnsupportedChain(uint256 chainId, string supportedChains);
    error MissingSharedContracts(string names, string howToDeploy);
    error UnexpectedCode(string contracts);
    error AddressTaken(address predicted);
    error PredictionDiffers(address expected, address actual);
    error FacetsDiffer(uint256 expected, uint256 actual);
    error UnexpectedFacet(address facet);
    error SelectorsDiffer(address facet);

    string internal constant PROJECT = "Minimal";
    bytes32 internal constant RECIPE_HASH = <recipe hash>;
    bytes1 internal constant SCOPE = 0x00;
    bytes11 internal constant ENTROPY = 0xababababababababababab;
    string internal constant SUPPORTED_CHAINS = "84532, 11155111";
    string internal constant MISSING_HELP =
        "Deploy them first with Deploy missing contracts\\u2026 in Lattice Studio or with the lattice-studio CLI.";

    // Shared contracts, at the addresses and codehashes the catalog pins.
    // Loupe
    address internal constant LOUPE_ADDRESS = 0x0000000000000000000000000000000000000001;
    bytes32 internal constant LOUPE_CODEHASH = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c001;
    // Token
    address internal constant TOKEN_ADDRESS = 0x0000000000000000000000000000000000000002;
    bytes32 internal constant TOKEN_CODEHASH = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c002;
    // TokenInit
    address internal constant TOKEN_INIT_ADDRESS = 0x0000000000000000000000000000000000000003;
    bytes32 internal constant TOKEN_INIT_CODEHASH = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c003;

    string internal missing;
    string internal wrongCode;

    function run() external returns (address diamond) {
        ChainConfig memory config = _chainConfig();
        _checkSharedContracts(config);

        vm.startBroadcast();
        (, address deployer,) = vm.readCallers();
        bytes32 salt = _salt(deployer);
        address predicted = _predict(config, deployer, salt);
        if (predicted.code.length != 0) revert AddressTaken(predicted);
        (address init, bytes memory initCalldata) = _init(predicted, deployer);
        diamond = _deploy(config, salt, init, initCalldata);
        vm.stopBroadcast();

        if (diamond != predicted) revert PredictionDiffers(predicted, diamond);
        _checkFacets(diamond);
        console.log("Deployed", PROJECT, "at", diamond);
        console.log("Recipe hash", vm.toString(RECIPE_HASH));
        console.log("Verify it from a Lattice checkout at commit", config.proxyCommit);
        console.log(
            string.concat(
                "FOUNDRY_PROFILE=ci forge verify-contract ",
                vm.toString(diamond),
                " src/Lattice.sol:Lattice --verifier sourcify --chain ",
                vm.toString(block.chainid)
            )
        );
    }

    function _chainConfig() internal view returns (ChainConfig memory config) {
        if (block.chainid == 84532) {
            config.factory = 0x0000000000000000000000000000000000000005;
            config.factoryCodehash = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c005;
            config.proxyInitCodeHash = 0x07ad118d6cc8642c86c03827f276d8b791a65e5c99a3845faf186be720a1455d;
            config.proxyCommit = "1111111111111111111111111111111111111111";
            return config;
        }
        if (block.chainid == 11155111) {
            config.factory = 0x0000000000000000000000000000000000000005;
            config.factoryCodehash = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c005;
            config.proxyInitCodeHash = 0x07ad118d6cc8642c86c03827f276d8b791a65e5c99a3845faf186be720a1455d;
            config.proxyCommit = "1111111111111111111111111111111111111111";
            return config;
        }
        revert UnsupportedChain(block.chainid, SUPPORTED_CHAINS);
    }

    function _checkSharedContracts(ChainConfig memory config) internal {
        _expect("LatticeFactory", config.factory, config.factoryCodehash);
        _expect("Loupe", LOUPE_ADDRESS, LOUPE_CODEHASH);
        _expect("Token", TOKEN_ADDRESS, TOKEN_CODEHASH);
        _expect("TokenInit", TOKEN_INIT_ADDRESS, TOKEN_INIT_CODEHASH);
        if (bytes(wrongCode).length != 0) revert UnexpectedCode(wrongCode);
        if (bytes(missing).length != 0) revert MissingSharedContracts(missing, MISSING_HELP);
    }

    function _expect(string memory name, address target, bytes32 codehash) internal {
        if (target.code.length == 0) {
            missing = _join(missing, name);
        } else if (target.codehash != codehash) {
            wrongCode = _join(wrongCode, string.concat(name, " at ", vm.toString(target)));
        }
    }

    function _join(string memory list, string memory item) internal pure returns (string memory) {
        return bytes(list).length == 0 ? item : string.concat(list, ", ", item);
    }

    // from ‖ scope ‖ entropy: 20 + 1 + 11 bytes, the salt Lattice Studio builds for the deploying account.
    function _salt(address deployer) internal pure returns (bytes32) {
        return bytes32(bytes20(deployer)) | (bytes32(SCOPE) >> 160) | (bytes32(ENTROPY) >> 168);
    }

    // CREATE2 from the factory with keccak256(abi.encode(deployer, salt)), as LatticeFactory._saltFor folds it.
    function _predict(ChainConfig memory config, address deployer, bytes32 salt) internal view returns (address) {
        bytes32 folded = keccak256(abi.encode(deployer, salt));
        bytes32 digest = keccak256(abi.encodePacked(bytes1(0xff), config.factory, folded, config.proxyInitCodeHash));
        address predicted = address(uint160(uint256(digest)));
        address reported = ILatticeFactory(config.factory).predict(deployer, salt);
        if (reported != predicted) revert PredictionDiffers(predicted, reported);
        return predicted;
    }

    // Every facet as a custom Add cut; no RecipeEntry, since registry records aren't known when the script is written.
    function _deploy(ChainConfig memory config, bytes32 salt, address init, bytes memory data)
        internal
        returns (address)
    {
        RecipeEntry[] memory entries = new RecipeEntry[](0);
        return ILatticeFactory(config.factory).deploy(entries, _cuts(), init, data, salt);
    }

    // facets() against the plan, per facet as sets: LatticeFactory applies registry cuts first, so order differs.
    function _checkFacets(address diamond) internal view {
        FacetCut[] memory cuts = _cuts();
        Facet[] memory facets = IDiamondLoupe(diamond).facets();
        if (facets.length != cuts.length) revert FacetsDiffer(cuts.length, facets.length);
        for (uint256 i; i < facets.length; ++i) {
            bytes4[] memory expected = _selectorsOf(cuts, facets[i].facetAddress);
            bytes4[] memory actual = facets[i].functionSelectors;
            if (expected.length != actual.length) revert SelectorsDiffer(facets[i].facetAddress);
            for (uint256 j; j < actual.length; ++j) {
                if (!_contains(expected, actual[j])) revert SelectorsDiffer(facets[i].facetAddress);
            }
        }
    }

    function _selectorsOf(FacetCut[] memory cuts, address facet) internal pure returns (bytes4[] memory) {
        for (uint256 i; i < cuts.length; ++i) {
            if (cuts[i].facetAddress == facet) return cuts[i].functionSelectors;
        }
        revert UnexpectedFacet(facet);
    }

    function _contains(bytes4[] memory list, bytes4 selector) internal pure returns (bool) {
        for (uint256 i; i < list.length; ++i) {
            if (list[i] == selector) return true;
        }
        return false;
    }

    function _cuts() internal pure returns (FacetCut[] memory cuts) {
        cuts = new FacetCut[](2);
        bytes4[] memory selectors;

        // Loupe 1.2.3
        selectors = new bytes4[](4);
        selectors[0] = bytes4(0x7a0ed627); // facets()
        selectors[1] = bytes4(0xadfca15e); // facetFunctionSelectors(address)
        selectors[2] = bytes4(0x52ef6b2c); // facetAddresses()
        selectors[3] = bytes4(0xcdffacc6); // facetAddress(bytes4)
        cuts[0] = FacetCut(LOUPE_ADDRESS, FacetCutAction.Add, selectors);

        // Token 1.2.3
        selectors = new bytes4[](2);
        selectors[0] = bytes4(0xa9059cbb); // transfer(address,uint256)
        selectors[1] = bytes4(0x06fdde03); // name()
        cuts[1] = FacetCut(TOKEN_ADDRESS, FacetCutAction.Add, selectors);
    }

    function _init(address diamond, address deployer) internal pure returns (address target, bytes memory data) {
        target = TOKEN_INIT_ADDRESS;
        data = _initStep0(diamond, deployer);
    }

    // bundle: TokenInit.init((address,string,uint8),address)
    function _initStep0(address diamond, address deployer) internal pure returns (bytes memory data) {
        data = abi.encodeWithSelector(bytes4(0x2f754208), _arg1(diamond), deployer);
    }

    // bundle.p
    function _arg1(address diamond) internal pure returns (TokenInitP memory v) {
        v.owner = diamond;
        v.name = "Minimal \\"token\\"";
        v.decimals = uint8(18);
    }
}
"
`;

exports[`exportFoundry structure snapshot through createx 1`] = `
"// SPDX-License-Identifier: MIT
// DeployMinimal.s.sol: deploys the diamond "Minimal" as Lattice Studio composed it.
// Generated by Lattice Studio 0.1.0. The same recipe, catalog and inputs give the same bytes.
//
// Recipe hash: <recipe hash>
// Catalog: Lattice v1.2.3 at commit 1111111111111111111111111111111111111111, catalog hash 0xcacacacacacacacacacacacacacacacacacacacacacacacacacacacacacacaca
// Toolchain: Foundry 1.8.3, solc 0.8.36
// Deploys through: CreateX.deployCreate3AndInit, one transaction with its init
// CreateX must hold its published runtime code, codehash 0xbd8a7ea8cfca7b4e5f5041d7d4b17bc317c5ce42cfbc42066a00cf26b43eb53f
// Salt: deploying account, scope 0x01 (this-chain), entropy 0xababababababababababab
// Chains: 84532, 11155111
//
// Run:
//   forge script DeployMinimal.s.sol --rpc-url $RPC_URL --account deployer --broadcast
// On Anvil, fork a supported chain where the shared contracts exist: anvil --fork-url $RPC_URL
//
// Before it broadcasts, the script checks that every shared contract's codehash matches the catalog, that the
// predicted address is empty, and that its own simulation of the deploy finds facets() equal to this plan:
//   Loupe 1.2.3, 4 selectors
//   Token 1.2.3, 2 selectors
//
// Init: one direct call
//   TokenInit.init((address,string,uint8),address)
// References: "This diamond" is the predicted address; "Deploying account" is the broadcaster.
//
// Verify: the script creates no contract forge could match. Verify the diamond against the published Lattice
// standard JSON, in a Lattice checkout at v1.2.3 (commit 1111111111111111111111111111111111111111):
//   FOUNDRY_PROFILE=ci forge verify-contract <diamond> src/Lattice.sol:Lattice --verifier sourcify --chain <chain id>
//
// Leaves out:
//   Deploying missing shared contracts: use Deploy missing contracts… in Lattice Studio or the lattice-studio CLI.
pragma solidity ^0.8.30;

import {Script} from "forge-std/Script.sol";
import {console} from "forge-std/console.sol";

// Lattice's diamond types (diamond-lib DiamondLib.sol and ILatticeFactory.sol at the pin), inlined.
enum FacetCutAction {
    Add,
    Replace,
    Remove
}

struct FacetCut {
    address facetAddress;
    FacetCutAction action;
    bytes4[] functionSelectors;
}

struct Facet {
    address facetAddress;
    bytes4[] functionSelectors;
}

interface ICreateX {
    struct Values {
        uint256 constructorAmount;
        uint256 initCallAmount;
    }

    function deployCreate3AndInit(bytes32 salt, bytes memory initCode, bytes memory data, Values memory values)
        external
        payable
        returns (address newContract);

    function computeCreate3Address(bytes32 salt) external view returns (address computedAddress);
}

interface ILattice {
    function initialize(FacetCut[] calldata facetCuts, address init, bytes calldata data) external payable;
}

interface IDiamondLoupe {
    function facets() external view returns (Facet[] memory);
}

struct ChainConfig {
    string proxyCommit;
}

// TokenInit p: address owner, string name, uint8 decimals
struct TokenInitP {
    address owner;
    string name;
    uint8 decimals;
}

contract DeployMinimal is Script {
    error UnsupportedChain(uint256 chainId, string supportedChains);
    error MissingSharedContracts(string names, string howToDeploy);
    error UnexpectedCode(string contracts);
    error AddressTaken(address predicted);
    error PredictionDiffers(address expected, address actual);
    error FacetsDiffer(uint256 expected, uint256 actual);
    error UnexpectedFacet(address facet);
    error SelectorsDiffer(address facet);

    string internal constant PROJECT = "Minimal";
    bytes32 internal constant RECIPE_HASH = <recipe hash>;
    bytes1 internal constant SCOPE = 0x01;
    bytes11 internal constant ENTROPY = 0xababababababababababab;
    string internal constant SUPPORTED_CHAINS = "84532, 11155111";
    string internal constant MISSING_HELP =
        "Deploy them first with Deploy missing contracts\\u2026 in Lattice Studio or with the lattice-studio CLI.";
    address internal constant CREATEX = 0xba5Ed099633D3B313e4D5F7bdc1305d3c28ba5Ed;
    bytes32 internal constant CREATEX_CODEHASH = 0xbd8a7ea8cfca7b4e5f5041d7d4b17bc317c5ce42cfbc42066a00cf26b43eb53f;
    bytes32 internal constant CREATE3_PROXY_CHILD_HASH =
        0x21c35dbe1b344a2488cf3321d6ce542f8e9f305544ff09e4993a62319a497c1f;
    bytes internal constant LATTICE_CREATION_CODE = hex"6000";

    // Shared contracts, at the addresses and codehashes the catalog pins.
    // Loupe
    address internal constant LOUPE_ADDRESS = 0x0000000000000000000000000000000000000001;
    bytes32 internal constant LOUPE_CODEHASH = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c001;
    // Token
    address internal constant TOKEN_ADDRESS = 0x0000000000000000000000000000000000000002;
    bytes32 internal constant TOKEN_CODEHASH = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c002;
    // TokenInit
    address internal constant TOKEN_INIT_ADDRESS = 0x0000000000000000000000000000000000000003;
    bytes32 internal constant TOKEN_INIT_CODEHASH = 0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c003;

    string internal missing;
    string internal wrongCode;

    function run() external returns (address diamond) {
        ChainConfig memory config = _chainConfig();
        _checkSharedContracts(config);

        vm.startBroadcast();
        (, address deployer,) = vm.readCallers();
        bytes32 salt = _salt(deployer);
        address predicted = _predict(config, deployer, salt);
        if (predicted.code.length != 0) revert AddressTaken(predicted);
        (address init, bytes memory initCalldata) = _init(predicted, deployer);
        diamond = _deploy(config, salt, init, initCalldata);
        vm.stopBroadcast();

        if (diamond != predicted) revert PredictionDiffers(predicted, diamond);
        _checkFacets(diamond);
        console.log("Deployed", PROJECT, "at", diamond);
        console.log("Recipe hash", vm.toString(RECIPE_HASH));
        console.log("Verify it from a Lattice checkout at commit", config.proxyCommit);
        console.log(
            string.concat(
                "FOUNDRY_PROFILE=ci forge verify-contract ",
                vm.toString(diamond),
                " src/Lattice.sol:Lattice --verifier sourcify --chain ",
                vm.toString(block.chainid)
            )
        );
    }

    function _chainConfig() internal view returns (ChainConfig memory config) {
        if (block.chainid == 84532) {
            config.proxyCommit = "1111111111111111111111111111111111111111";
            return config;
        }
        if (block.chainid == 11155111) {
            config.proxyCommit = "1111111111111111111111111111111111111111";
            return config;
        }
        revert UnsupportedChain(block.chainid, SUPPORTED_CHAINS);
    }

    function _checkSharedContracts(ChainConfig memory) internal {
        _expect("CreateX", CREATEX, CREATEX_CODEHASH);
        _expect("Loupe", LOUPE_ADDRESS, LOUPE_CODEHASH);
        _expect("Token", TOKEN_ADDRESS, TOKEN_CODEHASH);
        _expect("TokenInit", TOKEN_INIT_ADDRESS, TOKEN_INIT_CODEHASH);
        if (bytes(wrongCode).length != 0) revert UnexpectedCode(wrongCode);
        if (bytes(missing).length != 0) revert MissingSharedContracts(missing, MISSING_HELP);
    }

    function _expect(string memory name, address target, bytes32 codehash) internal {
        if (target.code.length == 0) {
            missing = _join(missing, name);
        } else if (target.codehash != codehash) {
            wrongCode = _join(wrongCode, string.concat(name, " at ", vm.toString(target)));
        }
    }

    function _join(string memory list, string memory item) internal pure returns (string memory) {
        return bytes(list).length == 0 ? item : string.concat(list, ", ", item);
    }

    // from ‖ scope ‖ entropy: 20 + 1 + 11 bytes, the salt Lattice Studio builds for the deploying account.
    function _salt(address deployer) internal pure returns (bytes32) {
        return bytes32(bytes20(deployer)) | (bytes32(SCOPE) >> 160) | (bytes32(ENTROPY) >> 168);
    }

    // CreateX guards a sender-prefixed salt, then CREATE3: a proxy at CREATE2(CreateX, guarded, child hash), then
    // the diamond at that proxy's first CREATE.
    function _predict(ChainConfig memory, address deployer, bytes32 salt) internal view returns (address) {
        bytes32 guarded = SCOPE == bytes1(0x01)
            ? keccak256(abi.encode(deployer, block.chainid, salt))
            : keccak256(abi.encode(deployer, salt));
        bytes32 digest = keccak256(abi.encodePacked(bytes1(0xff), CREATEX, guarded, CREATE3_PROXY_CHILD_HASH));
        address proxy = address(uint160(uint256(digest)));
        address predicted = address(uint160(uint256(keccak256(abi.encodePacked(hex"d694", proxy, hex"01")))));
        address reported = ICreateX(CREATEX).computeCreate3Address(guarded);
        if (reported != predicted) revert PredictionDiffers(predicted, reported);
        return predicted;
    }

    // The raw sender-prefixed salt, which CreateX guards itself, then the proxy's initialize(cuts, init, data).
    function _deploy(ChainConfig memory, bytes32 salt, address init, bytes memory data) internal returns (address) {
        bytes memory initialize = abi.encodeCall(ILattice.initialize, (_cuts(), init, data));
        ICreateX.Values memory values = ICreateX.Values(0, 0);
        return ICreateX(CREATEX).deployCreate3AndInit(salt, LATTICE_CREATION_CODE, initialize, values);
    }

    // facets() against the plan, per facet as sets: LatticeFactory applies registry cuts first, so order differs.
    function _checkFacets(address diamond) internal view {
        FacetCut[] memory cuts = _cuts();
        Facet[] memory facets = IDiamondLoupe(diamond).facets();
        if (facets.length != cuts.length) revert FacetsDiffer(cuts.length, facets.length);
        for (uint256 i; i < facets.length; ++i) {
            bytes4[] memory expected = _selectorsOf(cuts, facets[i].facetAddress);
            bytes4[] memory actual = facets[i].functionSelectors;
            if (expected.length != actual.length) revert SelectorsDiffer(facets[i].facetAddress);
            for (uint256 j; j < actual.length; ++j) {
                if (!_contains(expected, actual[j])) revert SelectorsDiffer(facets[i].facetAddress);
            }
        }
    }

    function _selectorsOf(FacetCut[] memory cuts, address facet) internal pure returns (bytes4[] memory) {
        for (uint256 i; i < cuts.length; ++i) {
            if (cuts[i].facetAddress == facet) return cuts[i].functionSelectors;
        }
        revert UnexpectedFacet(facet);
    }

    function _contains(bytes4[] memory list, bytes4 selector) internal pure returns (bool) {
        for (uint256 i; i < list.length; ++i) {
            if (list[i] == selector) return true;
        }
        return false;
    }

    function _cuts() internal pure returns (FacetCut[] memory cuts) {
        cuts = new FacetCut[](2);
        bytes4[] memory selectors;

        // Loupe 1.2.3
        selectors = new bytes4[](4);
        selectors[0] = bytes4(0x7a0ed627); // facets()
        selectors[1] = bytes4(0xadfca15e); // facetFunctionSelectors(address)
        selectors[2] = bytes4(0x52ef6b2c); // facetAddresses()
        selectors[3] = bytes4(0xcdffacc6); // facetAddress(bytes4)
        cuts[0] = FacetCut(LOUPE_ADDRESS, FacetCutAction.Add, selectors);

        // Token 1.2.3
        selectors = new bytes4[](2);
        selectors[0] = bytes4(0xa9059cbb); // transfer(address,uint256)
        selectors[1] = bytes4(0x06fdde03); // name()
        cuts[1] = FacetCut(TOKEN_ADDRESS, FacetCutAction.Add, selectors);
    }

    function _init(address diamond, address deployer) internal pure returns (address target, bytes memory data) {
        target = TOKEN_INIT_ADDRESS;
        data = _initStep0(diamond, deployer);
    }

    // bundle: TokenInit.init((address,string,uint8),address)
    function _initStep0(address diamond, address deployer) internal pure returns (bytes memory data) {
        data = abi.encodeWithSelector(bytes4(0x2f754208), _arg1(diamond), deployer);
    }

    // bundle.p
    function _arg1(address diamond) internal pure returns (TokenInitP memory v) {
        v.owner = diamond;
        v.name = "Minimal \\"token\\"";
        v.decimals = uint8(18);
    }
}
"
`;
